<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Russe Trans</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Разписание</string>
    <string name="action_2">2</string>
    <string name="action_9">9</string>
    <string name="action_13">13</string>
    <string name="action_21">21</string>
    <string name="action_24">24</string>
    <string name="action_25">25</string>
    <string name="action_27">27</string>
    <string name="action_29">29</string>
    <string name="info">Избери линия</string>
    <string name="info_dialog">Часове на тръгване от Бор</string>
    <string name="info_txt">05:10, 05:30, 05:45, 05:55, 06:10, 06:30, 06:40, 06:48, 06:58, 07:10, 07:30, 07:40, 07:48, 08:10, 08:30, 08:40, 
         08:50, 09:10, 09:30, 09:50, 10:10, 10:40, 11:00, 11:20, 11:40, 12:00, 12:20, 12:40, 12:58, 13:08, 13:20, 13:40, 13:50, 14:05, 14:13,
          14:20, 14:40, 14:50, 15:05, 15:13, 15:20, 15:40, 15:50, 16:10, 16:20, 16:35, 
         16:50, 17:05, 17:20, 17:27, 17:35, 17:50, 18:10, 18:20, 18:50, 19:10, 19:30, 19:48, 20:10, 20:30, 20:48, 21:10, 21:40</string>
    <string name="info_dialog1">Часове на тръгване от Мототехника</string>
     <string name="info_txt1">05:40, 06:00, 06:15, 06:25, 06:40, 07:00, 07:10, 07:20, 07:30, 07:40, 08:00, 08:10, 
         08:20, 08:40, 09:00, 09:10, 09:20, 09:40, 10:00, 10:20, 10:40, 11:10, 11:30, 11:50, 12:10, 12:30, 12:50, 
         13:10, 13:30, 13:40, 13:50, 14:10, 14:20, 14:33, 14:40, 14:50, 15:10, 15:20, 15:35, 15:43, 15:50, 16:10, 
         16:20, 16:40, 16:50, 17:05, 17:20, 17:40, 
         17:50, 17:57, 18:05, 18:20, 18:40, 18:50, 19:20, 19:40, 20:00, 20:20, 20:40, 21:00, 21:20, 21:40, 22:10</string>
    
</resources>