<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/info" 
        android:layout_gravity="center_horizontal"/>
    
      <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/action_2" 
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/action_9" 
         android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/action_13"
         android:layout_gravity="center_horizontal"
         />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_21" 
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/action_24"
         android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/action_25" 
         android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/action_27" 
         android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/action_29"
         android:layout_gravity="center_horizontal"/>


</LinearLayout>
