<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_dialog" 
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp" 
        android:layout_gravity="center_vertical"/>
    
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_txt" 
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_gravity="center_vertical"/>

    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_dialog1" 
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_gravity="center_vertical"/>
    
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_txt1" 
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_gravity="center_vertical"/>
    
</LinearLayout>
